--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
    "compileOnSave": true,
    "compilerOptions": {
        "noImplicitAny" : true,
-       "sourceMap": true
+       "sourceMap": true,
+       "outDir": "build/"
    },
     "exclude": [
         "node_modules",
