--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.0.2",
-    "typings": "^1.3.2"
+    "typings": "^1.3.2",
+    "typescript": "1.8.10"
   }
 }
