--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "restify": "^4.1.1"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.33",
+    "@types/lodash": "^4.14.36",
+    "@types/mocha": "^2.2.32",
+    "@types/node": "^6.0.41",
     "chai": "^3.5.0",
     "mocha": "^3.0.2",
-    "typings": "^1.3.2",
     "typescript": "1.8.10"
   }
 }
