--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
    "compilerOptions": {
        "noImplicitAny" : true,
        "sourceMap": true,
+       "strictNullChecks": false,
        "outDir": "build/"
    },
     "exclude": [
