--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "@types/node": "^6.0.41",
     "chai": "^3.5.0",
     "mocha": "^3.0.2",
-    "typescript": "1.8.10"
+    "typescript": "^2.0.3"
   }
 }
