--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@types/lodash": "^4.14.39",
     "@types/mocha": "^2.2.33",
     "@types/node": "^6.0.48",
+    "@types/restify": "^2.0.35",
+    "@types/sinon": "^1.16.32",
     "chai": "^3.5.0",
     "mocha": "^3.1.2",
+    "sinon": "^1.17.6",
     "typescript": "^2.0.10"
   }
 }
